grammar.js
    module: $ => choice(
      seq(
        'module',
        $._qualified_module_identifier,
        optional($.exports),
        'where',
        $._top_declarations
      ),
      seq(
        $._initialize_layout,
        repeat(seq($._top_declaration, choice($.terminal, $._layout_semicolon)))
      )
    ),

    _capitalized_identifier: $ => /[A-Z](\w|')*/,
    module_identifier: $ => $._capitalized_identifier,
    _qualified_module_identifier: $ => choice(
      $.qualified_module_identifier,
      $.module_identifier
    ),

    pragma: $ => token(prec(PREC.PRAGMA, seq(
      '{-#',
      repeat(choice(/[^#]/, /#[^-]/, /#-[^}]/)),
      '#-}'
    ))),

    _top_declarations: $ => choice(
      braces(repeat(seq($._top_declaration, optional($.terminal)))),
      seq(
        $._layout_open_brace,
        repeat(seq($._top_declaration, choice($.terminal, $._layout_semicolon))),
        $._layout_close_brace
      )
    ),

    _top_declaration: $ => choice(
      $.import_declaration,
      $.fixity_declaration,
      $.default_declaration,
      $.datatype_declaration,
      $.newtype_declaration,
      $.type_synonym_declaration,
      $.class_declaration,
      $.instance_declaration,
      $._declaration
    ),
